--- a/Wiki/SNES/Robotrek/Items.wikitext
+++ b/Wiki/SNES/Robotrek/Items.wikitext
@@ -219,6 +219,84 @@ Source: ROM address $01e413 (CC-separated strings)
 | 97 || $61 || Weather || Program
 |}
 
+== Key Item Descriptions ==
+
+From the game's item descriptions:
+
+{| class="wikitable"
+! Item !! Description !! Cost
+|-
+| Transiver || Lets you network with Nagisa if electrical currents are right || Free (starter)
+|-
+| Horn || Loud horn. Used to scare people, and also to warn them || Event item
+|-
+| Drill || Drill shaped like a mole. Used to dig through walls and fallen rock || Event item
+|-
+| Vanish || If you wear this you can become invincible for a while || 500 GP
+|-
+| Change || Use to change into a mouse. Get through mouse holes and speak Mouse || Event item
+|-
+| Glasses || Lets you see enemy's traps and hidden doors || 10 GP
+|-
+| Key || Key to open locked doors. Can only be used once || Event item
+|-
+| Little Robot || Robot for housekeeping and home improvement || 2000 GP
+|-
+| Light || Lights up the darkness || Event item
+|-
+| Seed || Flower seeds found in forest. Use is unclear || Event item
+|-
+| Blimp || Airplane from Carl's father. Lets you go to places you can't walk to || Event item
+|-
+| S/ship || With this you can go into outer space || Event item
+|-
+| Warp System || Y Button lets you warp to world map. Can't always be used || Event item
+|-
+| Relay || When you wear this, you can talk to animals || 20 GP
+|-
+| Cyber Jack || Lets you go into the Computer. A cyberspace item || 10 GP
+|-
+| Red Jar || Red Jar. Stops Engine in fortress || Event item
+|-
+| Blue Jar || Blue Jar. Stops Engine in fortress || Event item
+|-
+| Yel Jar || Yellow Jar. Stops Engine in fortress || Event item
+|-
+| Stone 1-3 || Flashes with a strange light. Mysterious Tetron Stone || Event item
+|}
+
+== Consumable Item Descriptions ==
+
+{| class="wikitable"
+! Item !! Description !! Cost
+|-
+| Smoke || Used in battle, it will help you escape, and stop enemy's movements || 20 GP
+|-
+| Cure || Restores robot's ENERGY || 60 GP
+|-
+| Clean || Energy is decreasing because of rust. Returns Robot to normal || 100 GP
+|-
+| Repair || Restores Robot to original condition from scraps || 300 GP
+|-
+| Big Bomb || Bombs, you can use in battle using command || 200 GP
+|-
+| Weather || A surprising invention that lets you control the weather || 200 GP
+|}
+
+== Scrap Materials ==
+
+Scraps are used in the Invention Machine to combine different kinds of things.
+
+{| class="wikitable"
+! Item !! Cost !! Notes
+|-
+| Scrap A || Event || Robot scrap from Napoleon
+|-
+| Scrap B || Event || From ruins of Polinski's house scrap
+|-
+| Scrap 1-10 || 1000 GP each || Standard crafting materials
+|}
+
 == Data Structure ==
 
 Item names are stored at ROM offset $01e413, separated by $cc bytes.
@@ -241,12 +319,20 @@ Item stats structure (TBD - requires further research):
 | $06 || 2 || Special Flags
 |}
 
+== See Also ==
+
+* [[Robotrek:Weapons|Weapons]] - Detailed weapon stats and combinations
+* [[Robotrek:Enemies|Enemies]]
+* [[Robotrek|Main Page]]
+
 == Notes ==
 
 * There are 98 items total (including "Nothing" placeholder)
 * Weapons are numbered with tiers (1-4 or 1-3)
 * Scraps are named A, B, then 1-10 for different materials
 * Programs are robot special abilities
+* Event items have build cost of 9999 GP in PAR codes but are obtained through gameplay
 
 [[Category:Data Tables]]
 [[Category:SNES]]
+[[Category:Robotrek]]
